# CogniLayer

./: .gitignore  QA-REPORT-2026-03-03.md  README.md  config.yaml  diagnose.py  install.py  onboard_helper.py  pyproject.toml
.github/workflows/: ci.yml
commands/: forget.md  recall.md  status.md
commands/cs/: cognihelp.md  harvest.md
commands/en/: cognihelp.md  forget.md  harvest.md  recall.md  status.md
hooks/: generate_agents_md.py  git-post-commit  on_file_change.py  on_pre_compact.py  on_session_end.py  on_session_start.py  register.py
mcp-server/: __init__.py  backfill_embeddings.py  db.py  embedder.py  i18n.py  init_db.py  server.py  utils.py
mcp-server/code/: indexer.py
mcp-server/indexer/: chunker.py  file_indexer.py
mcp-server/search/: fts_search.py
mcp-server/tools/: code_context.py  code_impact.py  code_index.py  code_search.py  consolidate.py  decision_log.py  file_index.py  file_search.py  identity_set.py  memory_delete.py  memory_link.py  memory_search.py  memory_write.py  project_context.py  recommend_tech.py  session_bridge.py  session_init.py  verify_identity.py
tests/: conftest.py  test_multi_cli.py  test_server.py
tui/: app.py  demo.py
